--- a/app/sass/button.sass
+++ b/app/sass/button.sass
@@ -17,6 +17,11 @@
 
   &:hover
     opacity: 0.6
+    background-color: #91b558
+
+  &:active
+    background-color: #648a27
+    opacity: 1
 
 .button-green
   background-color: #75a22e
@@ -36,4 +41,7 @@
   &:hover
     color: #ffffff
     text-decoration: none
-
+    background-color: #91b558
+    opacity: 1
+  &:active
+    background-color: #648a27
