--- a/app/sass/features-list.sass
+++ b/app/sass/features-list.sass
@@ -1,5 +1,5 @@
 .features 
-  margin-top: 50px
+  margin-top: 35px
 
   .col-lg-9
     padding-left: 40px
@@ -10,6 +10,7 @@
   list-style: none
   padding-left: 0
   margin-bottom: 0
+  margin-top: 15px
   justify-content: space-between
 
 .features-list__title
@@ -25,11 +26,7 @@
   padding-top: 14px
   padding-left: 34px
   padding-right: 8px
-  // margin-right: 55px
-
-  // &:nth-child(3n),
-  // &:nth-child(6n)
-  //   margin-right: 10px
+  margin-bottom: 40px
 
 .low-price,
 .delivery,
@@ -147,17 +144,20 @@
   .photo
     display: none
 
+  .features 
+    margin-top: 25px
+
   .features-list
     width: 440px
     justify-content: initial
-    // width: auto
     .col-lg-9
       padding-left: 30px
       padding-right: 0
 
   .features-list__item
     width: 189px
-    padding-left: 28px
+    padding-left: 19px
+    padding-right: 4px
     margin-right: 40px
     &:nth-child(2n),
     &:nth-child(4n),
@@ -170,6 +170,7 @@
 
   .features-list__title
     font-size: 15px
+    margin-bottom: 4px
 
   .low-price::before,
   .delivery::before,
@@ -183,53 +184,43 @@
   .low-price::after
     width: 44px
     height: 45px
+    left: -13%
 
   .delivery::after
     width: 46px
     height: 42px
+    left: -13%
 
   .guarantee::after
     width: 44px
     height: 42px
+    left: -13%
 
   .test-drive::after
     width: 47px
     height: 39px
+    left: -14%
 
   .assortment::after
     width: 43px
     height: 42px
+    left: -13%
 
   .money-back::after
     width: 41px
     height: 46px
+    left: -13%
     
 @media screen and (max-width: 767px)
   .features-list
     margin: 0 auto
-    justify-content: space-between
-
+    justify-content: center
+    width: 290px
 
   .features-list__item
     width: 123px
     padding-left: 26px
-    // margin-bottom: 35px
-    // padding-top: 14px
-    // padding-left: 34px
-    // padding-right: 8px
-    // margin-right: 25px
-
-    // &:nth-child(3n)
-    //   margin-right: 25px
-
-    // &:nth-child(2n),
-    // &:nth-child(4n),
-    // &:nth-child(6n)
-    //   margin-right: 6px
-
-    // &:nth-child(5n),
-    // &:nth-child(6n)
-    //   margin-bottom: 25px
+    margin-bottom: 30px
 
   .features-list__text
     display: none
@@ -277,4 +268,3 @@
 
     .col-lg-9
       padding-left: 20px
-
