--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,7 +5,7 @@
 @import slider
 @import button
 @import features-list
-@import control
+@import product-list
 @import about
 @import contact-popup
 
@@ -137,9 +137,7 @@ input:active.visually-hidden
   color: #ffffff
   background-color: #ff7f00
 
-.thumb-active
-  width: 10px
-  height: 10px
-  border-radius: 50%
-  color: red
+.stop-scroll
+  overflow: hidden
+  touch-action: none
   
