--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -17,17 +17,11 @@
     font-weight: $f-weight
     src: url($f-url) format('woff2')
 
-  
-
-
-
-
 @include font('Roboto', normal, 400, '../fonts/roboto-regular-webfont.woff2')
 @include font('Roboto', italic, 400, '../fonts/roboto-italic-webfont.woff2')
 @include font('Roboto', normal, 700, '../fonts/roboto-bold-webfont.woff2')
 @include font('Roboto', italic, 700, '../fonts/roboto-bolditalic-webfont.woff2')
 @include font('Tahoma', normal, 400, '../fonts/tahoma.woff2')
 @include font('Gotham', normal, 400, '../fonts/GothaProNarMed.woff2')
-
-// @include font('Arial', normal, 400, '../fonts/arial-mt-std-black-586c347abdbc8.woff2')
-// @include font('Arial', normal, 700, '../fonts/arial-mt-std-bold-cond-586c34dd7068c.woff2')
+@include font('CenturyBold', normal, 700, '../fonts/centuryGothicBold.woff2')
+@include font('Century', normal, 400, '../fonts/centuryGothic.woff2')
