--- a/app/sass/about.sass
+++ b/app/sass/about.sass
@@ -15,6 +15,10 @@
 .photo-about
   margin-top: 50px
 
+@media screen and (max-width: 992px)
+  .about
+    padding-bottom: 30px
+
 @media screen and (max-width: 767px)
   .about__title
     margin-top: 60px
