--- a/app/sass/slider.sass
+++ b/app/sass/slider.sass
@@ -5,7 +5,6 @@
   overflow: hidden
   user-select: none
 
-
 .slidewrapper 
   position: relative
   width: calc(100% * 5)
@@ -16,11 +15,9 @@
   transition: 1s
   transition-timing-function: ease-in-out
 
-
 .slidewrapper ul, .slidewrapper li 
   margin: 0
   padding: 0
-
 
 .slidewrapper li 
   width: calc(100%/5)
@@ -29,14 +26,14 @@
   float: left
 
 .slide-img 
-  width: 100%
-  height: 100%
-  font-size: 0
+  border-style: none
+  max-width: 100%
+  height: 100% 
 
 .nav-btns 
   position: absolute
   width: 100%
-  bottom: 20px
+  bottom: 10px
   padding: 0
   margin: 0
   text-align: center
@@ -68,18 +65,21 @@
 
 .slider-text
   position: absolute
-  padding-top: 68px
-  padding-left: 68px
-  z-index: 20
+  width: 75%
+  padding-top: 60px
+  padding-left: 65px
+  z-index: 5
 
 .slide__title
   margin: 0
-  margin-bottom: 25px
+  margin-bottom: 20px
+  font-family: 'Century'
   font-size: 34px
+  font-style: bold
   font-weight: 700
   text-transform: uppercase
   color: #ffffff
-  line-height: 37px
+  line-height: 40px
 
 .slider-description
   margin: 0
@@ -95,12 +95,36 @@
   right: -33%
   top: 80%
   display: block
+  font-family: 'Century'
   font-size: 44px
-  font-weight: 700
   font-weight: 700
   color: #ffffff
   transform: rotate(90deg)
 
-// @media screen and (max-width: 768px)
-//   .slide-show
-//     display: none
+.slide__currency
+  font-family: 'Century'
+  font-size: 34px
+  font-weight: 400
+
+.active
+  position: relative
+  display: inline-block
+  list-style: none
+  width: 12px
+  height: 12px
+  border: 2px solid #ffffff
+  margin: 3px
+  border-radius: 50%
+  background-color: #75a22e
+
+@media screen and (max-width: 992px)
+  .slider-description
+    width: 75%
+
+  .slide__price
+    right: -40%
+
+  .nav-btns
+    left: 8%
+    bottom: 2%
+    
