--- a/app/sass/special-offer.sass
+++ b/app/sass/special-offer.sass
@@ -1,5 +1,7 @@
 .special-offer
   height: 100%
+  width: 261px
+  margin-left: auto
   flex-direction: column
   padding: 38px 18px 22px 18px
 
@@ -37,7 +39,16 @@
 
 @media screen and (max-width: 992px)
   .offer-banner
-    display: none
+    height: 370px
+
+  .offer-banner__img
+    display: block
+    margin: 0 auto
+    width: 224px
+    height: 94px
+
+  .special-offer
+    height: 370px
 
 @media screen and (max-width: 767px)
   .offer-banner
@@ -55,7 +66,6 @@
 
   .special-offer__title
     font-size: 16px
-    // margin-bottom: 8px
     margin-top: 70px 
 
   .offer-banner__price
@@ -65,5 +75,7 @@
     left: 105px
     top: 45px
 
-
-
+  .special-offer
+    height: 100%
+    width: 291px
+    margin-left: 0
