--- a/app/sass/product-list.sass
+++ b/app/sass/product-list.sass
@@ -64,6 +64,20 @@
   font-size: 24px
   font-weight: 400
 
+.product-list__old
+  color: #828080
+  font-size: 16px
+  font-weight: 400
+  text-decoration: line-through
+
+.price-wrap
+  display: flex
+  flex-direction: column
+
+.old
+  height: 30px
+  margin-top: auto
+
 .product-wrapper
   justify-content: space-between
   margin-top: auto
