--- a/app/sass/footer.sass
+++ b/app/sass/footer.sass
@@ -208,6 +208,10 @@ footer
   .copyright__year,
   .copyright__name
     margin: 0
+
+  .copyright__name
+    margin-left: 3px
+
     
   .right-line
     width: auto
