--- a/app/sass/button.sass
+++ b/app/sass/button.sass
@@ -31,8 +31,33 @@
 
 .button-close
   position: absolute
-  right: 0
+  right: 5px
   top: 4px
+  width: 20px
+  height: 20px
+  background-image: url("../img/_src/close.png")
+  background-repeat: no-repeat
+  background-size: 100% 100%
+  font-size: 0
+  display: block
+  text-decoration: none
+  text-align: center
+  vertical-align: middle
+  box-sizing: border-box
+  cursor: pointer
+  appearance: none
+  background-color: transparent
+  border: none
+  opacity: 1
+  text-decoration: none
+  transition: opacity
+  transition-duration: 0.2s
+  transition-timing-function: ease-in-out
+  transition-delay: 0s
+
+  &:hover
+    background-color: none
+    opacity: 0.6
 
 .button-slider
   width: 128px
