--- a/app/sass/product-list.sass
+++ b/app/sass/product-list.sass
@@ -27,20 +27,18 @@
   display: flex
   flex-direction: column
   min-height: 296px
-  width: calc((100% / 4) - 15px)
+  width: 262px
   border: 1px solid #f1f1f1
   overflow: hidden
   padding-bottom: 22px
   padding-left: 15px
   padding-right: 10px
   padding-top: 12px
+  margin-right: 30px
 
   img 
     display: block
     margin: 0 auto
-
-  &:hover
-    box-shadow: 0 10px 25px rgba(41, 52, 73, .5)
 
 .product-list__title,
 .special-offer__title  
@@ -65,6 +63,7 @@
   font-weight: 400
 
 .product-list__old
+  // position: absolute
   color: #828080
   font-size: 16px
   font-weight: 400
@@ -76,7 +75,7 @@
 
 .old
   height: 30px
-  margin-top: auto
+  margin-top: 12px
 
 .product-wrapper
   justify-content: space-between
@@ -96,6 +95,28 @@
   right: 50px
   bottom: 15px
   background-color: #ffffff
+
+.discount-flag .product-list__description
+  margin-bottom: 0
+
+// product-slider
+.product-slider
+  width: 1170px
+  margin: 0 auto
+
+.product-slider__wrapper
+  width: 1140px
+  margin-left: auto
+  margin-right: auto
+
+.product-list__description
+  margin-bottom: 17px
+  display: block
+
+.product-list__rub
+  color: #2d2d2c
+  font-size: 13px
+  font-weight: 400
 
 .nav-btn-prev
   position: absolute
@@ -130,6 +151,7 @@
     margin-top: 10px
 
   .product-list
+    position: relative
     margin-top: 30px
 
   .control-list__item
@@ -145,6 +167,24 @@
   .product-list__img
     margin: 0 auto
 
+  .product-list::after
+    position: absolute
+    content: ""
+    top: 0
+    right: 0
+    width: 453px
+    height: 300px
+    background-image: linear-gradient(to right,rgba(255,255,255,0),#ffffff)
+    z-index: 9999
+
+  .product-slider
+    width: 768px
+    margin: 0 auto
+
+  .product-slider__wrapper
+    width: 768px
+    margin: 0
+
 @media screen and (max-width: 767px)
   .catalog
     margin-top: 10px
@@ -157,18 +197,24 @@
     padding-right: 10px
     padding-top: 22px
 
-    &:last-child
-      padding-top: 15px
+    // &:last-child
+    //   padding-top: 15px
 
     a
       font-size: 12px
-      line-height: 10px
+      line-height: 13px
 
   .product-list
-    margin-top: 20px  
+    margin-top: 20px
+
+  .product-list::after
+    display: none  
 
   .product-list__item
     display: none
+    width: 290px
+    height: 326px
+    margin: 0 auto
 
     &:first-child
       display: block
@@ -182,3 +228,11 @@
 
   .product-wrapper
     margin-top: 15px
+
+  .product-slider
+    width: 290px
+    margin: 0 auto
+
+  .product-slider__wrapper
+    width: 290px
+    margin: 0
