--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -137,4 +137,11 @@ input:active.visually-hidden
 .stop-scroll
   overflow: hidden
   touch-action: none
+
+.hidden
+  display: none !important
+
+.focused
+  background-color: #547c14 !important
+
   
